# Cache

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/: base_addr_handler.h  base_cache.h  base_data_handler.h  base_replacer.h  common.h
include/addr_handlers/: fully_associative_addr_handler.h
include/data_handlers/: fully_associative_data_handler.h
include/models/: lfu_cache.h
include/replacer/: lfu_replacer.h
tests/: test_cache.cpp
